# BMInsight

./: .env-example  .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: gender.css  ruler.css  scale.css  styles.css
src/: app.rs
src-tauri/: .env-example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: bmi.rs  cmd.rs  llm.rs  mod.rs  state.rs
src-tauri/src/integrations/: groq.rs  mod.rs
src-tauri/src/utils/: env.rs  mod.rs  numbers.rs
src-tauri/tests/: bmi_tests.rs
src/components/: gender.rs  mod.rs  ruler.rs  scale.rs
